--- a/app/src/main/res/layout/musiclist_card.xml
+++ b/app/src/main/res/layout/musiclist_card.xml
@@ -8,7 +8,7 @@
 
     <androidx.cardview.widget.CardView
         android:layout_width="wrap_content"
-        android:layout_height="50dp"
+        android:layout_height="wrap_content"
         android:layout_marginLeft="25dp"
         android:layout_marginTop="10dp"
         android:layout_marginRight="25dp"
@@ -19,6 +19,8 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:padding="20dp"
+            android:background="@color/song_card"
             android:orientation="vertical">
 
 
@@ -26,14 +28,15 @@
                 android:id="@+id/tv_status"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="20dp"
                 app:layout_constraintHorizontal_bias="0.05"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
                 android:gravity="center"
-                android:textSize="18sp"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                android:textColor="@color/colorAccent"
                 android:text="@{file.name}" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
