--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#6200EE</color>
-    <color name="colorPrimaryDark">#3700B3</color>
-    <color name="colorAccent">#03DAC5</color>
+    <color name="colorPrimary">#29293d</color>
+    <color name="colorPrimaryDark">#14141f</color>
+    <color name="colorAccent">#c2c2d6</color>
+    <color name="background">#727b8d</color>
+    <color name="song_card">#ff4d4d</color>
 </resources>
