--- a/app/src/main/res/layout/musiclist_card.xml
+++ b/app/src/main/res/layout/musiclist_card.xml
@@ -16,30 +16,35 @@
         app:cardCornerRadius="25dp"
         app:cardElevation="6dp">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:padding="20dp"
             android:background="@color/song_card"
-            android:orientation="vertical">
+            android:orientation="horizontal">
 
 
             <TextView
                 android:id="@+id/tv_status"
+                android:layout_weight="0.7"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:layout_constraintHorizontal_bias="0.05"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
-                android:gravity="center"
                 android:textSize="16sp"
                 android:textStyle="bold"
                 android:textColor="@color/colorAccent"
                 android:text="@{file.name}" />
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
+
+            <ImageView
+                android:id="@+id/iv_edit"
+                android:layout_weight="0.3"
+                android:layout_width="wrap_content"
+                android:layout_marginLeft="5dp"
+                android:layout_height="24dp"
+                android:layout_gravity="center"
+                android:src="@drawable/ic_edit"
+                />
+        </LinearLayout>
 
 
     </androidx.cardview.widget.CardView>
