--- a/app/src/main/res/layout/musiclist_card.xml
+++ b/app/src/main/res/layout/musiclist_card.xml
@@ -2,8 +2,8 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <data>
-        <variable name="file"
-            type="java.io.File"/>
+        <variable name="song"
+            type="com.frezzcoding.musicplayer.models.Song"/>
     </data>
 
     <androidx.cardview.widget.CardView
@@ -32,7 +32,7 @@
                 android:textSize="16sp"
                 android:textStyle="bold"
                 android:textColor="@color/colorAccent"
-                android:text="@{file.name}" />
+                android:text="@{song.name}" />
 
 
             <ImageView
