--- a/app/src/main/res/layout/song_item_layout.xml
+++ b/app/src/main/res/layout/song_item_layout.xml
@@ -24,7 +24,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="0.7"
-            android:text="@{song.name}"
+            android:text="@{song.primaryname}"
             android:textColor="@color/colorAccent"
             android:textSize="16sp"
             android:textStyle="bold" />
