--- a/app/src/main/res/layout/popup_editname.xml
+++ b/app/src/main/res/layout/popup_editname.xml
@@ -44,21 +44,21 @@
         >
 
         <com.google.android.material.button.MaterialButton
-            android:id="@+id/btn_remove"
+            android:id="@+id/btn_hidesong"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintRight_toLeftOf="@id/btn_confirm"
             style="@style/Widget.MaterialComponents.Button.OutlinedButton"
-            android:text="Remove"
+            android:text="Hide"
             />
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/btn_confirm"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintLeft_toRightOf="@id/btn_remove"
+            app:layout_constraintLeft_toRightOf="@id/btn_hidesong"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             style="@style/Widget.MaterialComponents.Button.OutlinedButton"
