--- a/app/src/main/res/layout/song_item_layout.xml
+++ b/app/src/main/res/layout/song_item_layout.xml
@@ -14,7 +14,7 @@
         android:id="@+id/top_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/song_card"
+        android:background="@drawable/pressable"
         android:orientation="horizontal"
         android:padding="20dp">
 
