chore: if song duration is 0 seconds then show its 1 second

--- a/app/src/main/res/layout/song_item_layout.xml
+++ b/app/src/main/res/layout/song_item_layout.xml
@@ -57,7 +57,7 @@
         android:maxLines="1"
         android:textColor="#fff"
         app:drawableStartCompat="@drawable/ic_time"
-        tools:text="@{song.duration}" />
+        tools:text='@{song.duration.equals("00:00") ? "00:01" : song.duration}' />
 
 
 </RelativeLayout>
