--- a/app/src/main/res/drawable/pressable.xml
+++ b/app/src/main/res/drawable/pressable.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
+    <item android:drawable="@color/cardview_light_background" android:state_focused="false" android:state_pressed="false" android:state_selected="false"/>
     <item android:drawable="@color/song_card" android:state_pressed="true"/>
     <item android:drawable="@color/song_card_selected" android:state_selected="true"/>
     <item android:drawable="@color/song_card" android:state_focused="true"/>
