--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,6 +8,29 @@
     android:layout_height="match_parent"
     tools:context=".view.MainActivity">
 
+    <LinearLayout
+        android:id="@+id/ad_layout"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:visibility="gone"
+        >
+        <com.google.android.gms.ads.AdView
+            android:id="@+id/ad_schedule"
+            android:background="#fff"
+            ads:adSize="BANNER"
+            ads:adUnitId="ca-app-pub-6413313217193048/2468177287"
+            xmlns:ads="http://schemas.android.com/apk/res-auto"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            />
+    </LinearLayout>
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/layout_songlist"
         android:layout_width="match_parent"
@@ -16,7 +39,8 @@
         app:layout_constraintBottom_toTopOf="@id/layout_buttons"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toBottomOf="@id/ad_layout"
+        >
 
     </androidx.recyclerview.widget.RecyclerView>
 
