--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,6 +31,21 @@
             />
     </LinearLayout>
 
+    <TextView
+        android:id="@+id/tv_noresult"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:text="No songs found in internal storage"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        android:visibility="gone"
+        android:textColor="#ffff"
+        />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/layout_songlist"
         android:layout_width="match_parent"
